// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loader if resource store is not initialized 1`] = `
<DocumentFragment>
  <div
    class="loader"
  >
    <div
      class="spinner"
      style="width: 40px; height: 40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders tabs and child if resource store is initialized 1`] = `
<DocumentFragment>
  <div
    data-testid="tabs"
  >
    <h1>
      Child
    </h1>
  </div>
</DocumentFragment>
`;
